# convex-hull-cpp14

./: CMakeLists.txt  LICENSE  README.md
2d.convex.hull++/: algorithms.hpp  algorithms_test.hpp  angle.hpp  angle_test.hpp  graham_scan_test.hpp  jarvis_march_test.hpp  main.cpp  monotone_chain_test.hpp  point_concept.hpp  point_concept_test.hpp  reflection.hpp  test_main.hpp  utils.hpp
2d.convex.hull++.xcodeproj/: project.pbxproj
2d.convex.hull++.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
2d.convex.hull++.xcodeproj/xcuserdata/loteur.xcuserdatad/xcschemes/: 2d.convex.hull++.xcscheme  xcschememanagement.plist
2d.convex.hull++/hull/: algorithms.hpp  assert.hpp  bounding_box.hpp  chan_algorithm.hpp  graham_scan.hpp  jarvis_march.hpp  monotone_chain.hpp  point_concept.hpp  utils.hpp
2d.convex.hull++/test/: algorithms_test.hpp  angle_test.hpp  bounding_box_test.hpp  chan_test.hpp  graham_scan_test.hpp  jarvis_march_test.hpp  monotone_chain_test.hpp  point2d.hpp  point_concept_test.hpp
hull/: angle.hpp  assert.hpp  bounding_box.hpp  chan_algorithm.hpp  graham_scan.hpp  jarvis_march.hpp  math_utils.hpp  monotone_chain.hpp  point_concept.hpp  point_math_utils.hpp  reflection.hpp  static_assert.hpp  tuple_utils.hpp
test/: CMakeLists.txt  algorithms_test.cpp  angle_test.cpp  bounding_box_test.cpp  chan_test.cpp  graham_scan_test.cpp  jarvis_march_test.cpp  main.cpp  monotone_chain_test.cpp  point2d.hpp  point_concept_test.cpp  test_main.cpp  test_main.hpp
